<resources>
    <string name="app_name">Demo</string>
    <string name="todo">TODO</string>
    <string name="textview">App is starting ..</string>
    <string name="email_hint">Enter your email</string>
    <string name="pass_hint">Enter password</string>
    <string name="repass_hint">Re-enter password</string>
    <string name="getstarted">Get Started.</string>
    <string name="welcomeback">Welcome Back.</string>
    <string name="timetable">Time Table</string>
    <string name="ytimetable">Term Calender</string>
    <string name="map">College map</string>
    <string name="result">Results</string>
    <string name="faculty">Faculty </string>
    <string name="aboutus">About us</string>
    <string name="contactus">Contact us</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="setng">Setting</string>
    <string name="logout">Log out</string>
    <string-array name="semesters_odd">
        <item>Choose Semester</item>
        <item>Semester 1</item>
        <item>Semester 3</item>
        <item>Semester 5</item>
        <item>Semester 7</item>
    </string-array>
    <string-array name="semesters_even">
        <item>Choose Semester</item>
        <item>Semester 2</item>
        <item>Semester 4</item>
        <item>Semester 6</item>
        <item>Semester 8</item>
    </string-array>
    <string-array name="branch">
        <item>Choose branch</item>
        <item>Computer</item>
        <item>IT</item>
    </string-array>
    <string-array name="nYears">
        <item>Choose Year</item>
        <item> Second year</item>
        <item>Third Year</item>
        <item>Fourth Year</item>
    </string-array>
    <string-array name="nDiv">
        <item>Choose Div</item>
        <item>A</item>
        <item>B</item>
    </string-array>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="submit">Submit</string>
    <string name="VerifyPara">A verification link has has been sent to registered email address. Verify your account to continue to app . Sign out if enterred wrong email address .</string>
</resources>
