<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/aboutus" android:title="@string/aboutus" android:icon="@drawable/ic_info_outline_black_24px" android:elevation="20dp" />
    <item android:id="@+id/contactus" android:title="@string/contactus" android:icon="@drawable/ic_call_black_24px" android:elevation="20dp"/>
    <item android:id="@+id/setng" android:title="@string/setng" android:icon="@drawable/ic_settings_black_24px" android:elevation="20dp"/>
    <item
        android:id="@+id/chat"
        android:title="CHAT" />
    <item android:id="@+id/logout" android:title="@string/logout" android:icon="@drawable/ic_mail_outline_black_24px" android:elevation="20dp"/>

</menu>